2011-09-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSControl.m (+initialize, -valueForKey:,
	-setValue:forKey:): Add support for the bindings NSFontNameBinding
	and NSFontSizeBinding.

2011-09-09  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m (_cacheForRep:): Don't assume rep is non-nil. This should fix
	locking focus on an image with no representations.

2011-09-08  Gregory Casamento <greg.casamento@gmail.com>

	* Source/NSImage.m: Correction for call to function NSEqualSizes.
	It was mistyped as "NSSizesEqual" which was producing a link-time
	error.

2011-09-08  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImage.m: Throw an exception if you attempt to lock focus on an image with
	size (0, 0)
	* Source/NSCachedImageRep.m: Throw an exception if you attempt to create a cached
	image rep with a size of (0, 0).

2011-09-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSFontPanel.m: Add a tooltip on the character panel button

2011-09-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSSpellChecker.m: Use NSLog rather than a popup alert when the spell
	server can't be contacted; otherwise the user may be spammed with a series
	of popups if automatic spellchecking (underlining) is turned on, but
	the current language isn't set.

2011-09-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/GSCharacterPanel.m: Implement -[NSApplication orderFrontCharacterPalette:]
	* Source/NSFontPanel.m: Use NSApplication method to order front character palette

2011-09-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImageCell.m (-drawInteriorWithFrame:inView:): Simplify a bit
	bit by using
	-[NSImage drawInRect:fromRect:operation:fraction:respectFlipped:hints:]
	* Source/NSCell.m (-drawInteriorWithFrame:inView:): Switch from
	-[NSImage compositeToPoint...] to
	-[NSImage drawInRect:fromRect:operation:fraction:respectFlipped:hints:]

2011-09-07  Eric Wasylishen  <ewasylishen@gmail.com>
